2008-02-26  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1901599:
    * experimental/org/jfree/chart/annotations/XYTitleAnnotation.java
    (draw): Check for null 'info' argument before adding entities,
    (hashCode): Reimplemented,
    * experimental/org/jfree/chart/annotations/junit/XYTitleAnnotationTests.java
    (testDrawWithNullInfo): New test.

2008-02-26  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1897580:
    * source/org/jfree/data/DefaultIntervalCategoryDataset.java
    (DefaultIntervalCategoryDataset(Comparable[], Comparable[], Number[][], 
    Number[][]): Initialise seriesKeys and categoryKeys to empty arrays instead
    of null for empty dataset,
    (setCategoryKeys): Fixed argument check to handle empty dataset.
    
2008-02-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/util/LogFormat.java
    (powerLabel): New field,
    (LogFormat(double, String, boolean)): Delegate to new constructor,
    (LogFormat(double, String, String, boolean)): New constructor,
    (format): Use new powerLabel,
    (equals): New method override,
    (clone): Likewise.

2008-02-18  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1880114:
    * source/org/jfree/chart/renderer/xy/VectorRenderer.java
    (drawItem): Modify arrow-head for plot orientation.

2008-02-18  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1871902 by Martin Hoeller:
    * source/org/jfree/chart/plot/PolarPlot.java
    (DEFAULT_ANGLE_TICK_UNIT_SIZE): New field,
    (angleTickUnit): Likewise,
    (PolarPlot(XYDataset, ValueAxis, PolarItemRenderer)): Initialise 
    angleTickUnit,
    (getAngleTickUnit): New method,
    (setAngleTickUnit): Likewise,
    (refreshAngleTicks): Likewise,
    (draw): Refresh angle tick list before drawing.
    
2008-02-15  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1868745:
    * source/org/jfree/chart/axis/LogAxis.java