@@ -1,3 +1,11 @@
+2008-03-19  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/plot/PiePlot3D.java
+    (getMaximumExplodePercent): Check for null dataset,
+    (initialise): Likewise,
+    * tests/org/jfree/chart/plot/junit/PiePlot3DTests.java
+    (testDrawWithNullDataset): New test method.
+
 2008-02-26  David Gilbert  <david.gilbert@object-refinery.com>
 
     Patch 1901599:
